cmake_minimum_required(VERSION 3.28)
project(Langage_C-3)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(if if.c)
add_executable(structure_conditionnelles_exercice_1 structure_conditionnelles_exercice_1.c)
add_executable(structure_conditionnelles_exercice_2 structure_conditionnelles_exercice_2.c)
add_executable(structure_conditionnelles_exercice_3 structure_conditionnelles_exercice_3.c)
add_executable(structure_conditionnelles_exercice_4 structure_conditionnelles_exercice_4.c)
