cmake_minimum_required(VERSION 3.28)
project(Langage_C-4)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(table_de_multiplication table_de_multiplication.c)
add_executable(somme_des_premier_entier_positif somme_des_premier_entier_positif.c)
add_executable(boucle_while boucle_while.c)
add_executable(plusGrand_plusPetit plusGrand_plusPetit.c)
add_executable(boucle_do_while boucle_do_while.c)
add_executable(boucle_do_while_exercice_3 boucle_do_while_exercice_3.c)
