cmake_minimum_required(VERSION 3.29)
project(Langage_C-8 C)

set(CMAKE_C_STANDARD 99)

add_executable(main main.c)
add_executable(Exercice_1 Exercice_1.c)
add_executable(Exercice_2 Exercice_2.c)
add_executable(Pointeur-tableau Pointeur-tableau_Exemple_1.c)
add_executable(Pointeur-tableau_Exemple_2 Pointeur-tableau_Exemple_2.c)
add_executable(Pointeur-tableau_Exemple_3 Pointeur-tableau_Exemple_3.c)
add_executable(Arithmetique_des_pointeurs-sizeof Arithmetique_des_pointeurs-sizeof.c)
add_executable(Arithmetique_des_pointeurs-Incrementation Arithmetique_des_pointeurs-Incrementation.c)
add_executable(Arithmetique_des_pointeurs-addition Arithmetique_des_pointeurs-addition.c)
add_executable(Arithmetique_des_pointeurs-soustraction Arithmetique_des_pointeurs-soustraction.c)
add_executable(Arithmetique_des_pointeurs-soustraction_entre_2_pointeurs Arithmetique_des_pointeurs-soustraction_entre_2_pointeurs.c)
add_executable(Arithmetique_des_pointeurs-Comparaison Arithmetique_des_pointeurs-Comparaison.c)
add_executable(Exercice_3 Exercice_3.c)
add_executable(Exercice_4 Exercice_4.c)
add_executable(Exercice_5 Exercice_5.c)
